@startuml

title __RESPONSE's Class Diagram__\n

  namespace br.com.apibancaria {
    namespace dto.response {
      class br.com.apibancaria.dto.response.ChavePixResponse {
          - ativa : Boolean
          - chave : String
          - dataCadastro : LocalDateTime
          - id : Long
          + ChavePixResponse()
          + ativa()
          + chave()
          + dataCadastro()
          + id()
          + tipo()
      }
    }
  }
  

  namespace br.com.apibancaria {
    namespace dto.response {
      class br.com.apibancaria.dto.response.ClienteResponse {
          - cpf : String
          - email : String
          - id : Long
          - nome : String
          + ClienteResponse()
          + cpf()
          + email()
          + id()
          + nome()
      }
    }
  }
  

  namespace br.com.apibancaria {
    namespace dto.response {
      class br.com.apibancaria.dto.response.ContaResponse {
          - agencia : String
          - dataCriacao : LocalDateTime
          - id : Long
          - numeroConta : String
          - saldo : BigDecimal
          + ContaResponse()
          + agencia()
          + dataCriacao()
          + id()
          + numeroConta()
          + saldo()
          + status()
      }
    }
  }
  

  namespace br.com.apibancaria {
    namespace dto.response {
      class br.com.apibancaria.dto.response.LoginResponse {
          - token : String
          + LoginResponse()
          + token()
      }
    }
  }
  

  namespace br.com.apibancaria {
    namespace dto.response {
      class br.com.apibancaria.dto.response.TransacaoResponse {
          - dataHora : LocalDateTime
          - descricao : String
          - id : Long
          - valor : BigDecimal
          + TransacaoResponse()
          + dataHora()
          + descricao()
          + id()
          + tipo()
          + valor()
      }
    }
  }
  

  br.com.apibancaria.dto.response.ChavePixResponse o-- br.com.apibancaria.enums.TipoChavePix : tipo
  br.com.apibancaria.dto.response.ContaResponse o-- br.com.apibancaria.enums.StatusConta : status
  br.com.apibancaria.dto.response.TransacaoResponse o-- br.com.apibancaria.enums.TipoTransacao : tipo


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
